--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,6 +1,27 @@
 @CHARSET "ISO-8859-1";
+html {
+	height: 100%;
+  	box-sizing: border-box;
+  	color: #2C2C2E;
+}
 body {
 	background-color: rgb(250,154,130);
+	position: relative;
+	min-height: 100%;
+  	font-family: "Helvetica Neue", Arial, sans-serif;
+  	padding-bottom: 6rem;
+	min-width: 500px;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+a {
+	color: #2B2B2D;
+}
+button {
+	background-color: #70665A;
 }
 
 /*Header*/
@@ -11,9 +32,9 @@ header {
 
 h1 {
 	text-align: center;
-	color: black;
+	color: #2C2C2E;
    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-   -webkit-text-stroke-width: 0.3px;
+   -webkit-text-stroke-width: 0.5px;
    -webkit-text-stroke-color: black;
 	font-style: italic; 
 	font-size:3em;
@@ -22,9 +43,9 @@ h1 {
 
 h2 {
 	text-align: center;
-	color: black;
+	color: #2C2C2E;
    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-   -webkit-text-stroke-width: 0.3px;
+   -webkit-text-stroke-width: 0.5px;
    -webkit-text-stroke-color: black;
    font-size: 1.5em;
    margin-left: 250px;
@@ -36,7 +57,7 @@ nav {
 	background-color: rgba(250,120,88,0.8);
 	width: 40%;
 	margin: 0 auto;
-	border: black solid 3px;
+	border: #2C2C2E solid 3px;
 	display:flex;
 	flex-flow: row wrap;
 	justify-content: space-around;
@@ -86,7 +107,7 @@ main {
 article {
 	background-color: rgb(250,120,88);
 	padding: 10px 10px;
-	border: black solid 1px;
+	border: #2C2C2E solid 1px;
 	margin-top: 20px;
 }
 
@@ -96,7 +117,7 @@ article {
 	margin-top: 40px;
 }
 #link a {
-	color: black;
+	color: #2C2C2E;
 }
 
 #linkHome {
@@ -141,19 +162,25 @@ input, textarea {
 
 /*Footer*/
 footer {
-	width:100%;
-	height:20px;		
-	background:black;
-	margin-top: 50px;
-}
-footer p {
-	color: white;
-	margin: 2px 0;
-	text-align: center;
+	position: absolute;
+  	right: 0;
+  	bottom: 0;
+  	left: 0;
+	width:100%;	
+ 	background-color: #70665A;
+  	text-align: center;
+  	color: white;
+  	padding: 5px;
 }
 
 /*Error message*/
 .error {
-	background-color: rgba(139,1,1,0.8);
+	color: white;
+	padding: 0.2rem;
+}
+#errors {
+	background-color: rgb(162,80,94); 
+	border-radius: 15px;
+	padding: 3px;
 }
 
