--- a/WebContent/errorMessages.jspf
+++ b/WebContent/errorMessages.jspf
@@ -1,10 +1,11 @@
-<%@ page import="java.util.ArrayList"%>
-		<% 	if(request.getAttribute("errors")!=null) {
-			ArrayList<String> errors = (ArrayList<String>) request.getAttribute("errors");
-			if (errors.size() > 0) { 
-				for (String error: errors) {%>
-					<p class="error">- <%=error%></p>
-				<%	} %>	
-			<% 	}
-		}
-%>
+<%@ page import="java.util.HashMap"%>
+<div id="errors">
+<%	if(request.getAttribute("errors")!=null) {
+		HashMap<String,String> errors = (HashMap<String,String>) request.getAttribute("errors");
+		if (errors.size() > 0) { 
+			for (String error: errors.values()) {%>
+				<p class="error">- <%=error%></p>
+			<%	} %>	
+		<% 	}
+	} %>
+</div>
