--- a/WebContent/aptForm.jspf
+++ b/WebContent/aptForm.jspf
@@ -5,7 +5,6 @@
 			<label for="adres" class="<%= request.getAttribute("adresStatus") %>">Adres*</label>
 			<input type="text" class="<%= request.getAttribute("adresStatus") %> id="adres" name="adres" required value="<%= request.getAttribute("adresWaarde")!=null ? request.getAttribute("adresWaarde") : "" %>" />
 			<label for="linkAppt" class="<%= request.getAttribute("linkApptStatus") %>">Link*</label>
-			<input type="url" class="<%= request.getAttribute("linkApptStatus") %>" id="linkAppt" name="linkAppt" required value="<%= request.getAttribute("linkApptWaarde")!=null ? request.getAttribute("linkAppt") : "" %>" />
+			<input type="url" <%= request.getAttribute("linkApptStatus")=="OK" ? "readonly" : "" %> class="<%= request.getAttribute("linkApptStatus") %>" id="linkAppt" name="linkAppt" required value="<%= request.getAttribute("linkApptWaarde")!=null ? request.getAttribute("linkApptWaarde") : "" %>" />
 			<label for="casino" class="<%= request.getAttribute("casinoStatus") %>">Casino*</label>
 			<input type="number" class="<%= request.getAttribute("casinoStatus") %>" id="casino" name="casino" min=0 value="<%= request.getAttribute("casinoWaarde")!=null ? request.getAttribute("casinoWaarde") : "" %>" />
-			<input type="submit" value="Toevoegen"/>
